# crewaifivem

./: .env  INSTALL_UBUNTU.md  README.md  fivem_script_generator_ui.html  main.py  pyproject.toml  server.py  viewer.html
output/death-respawn-airport/: README.md  client.lua  config.lua  fxmanifest.lua  init.sql  server.lua
output/standalone-tp-system/: README.md  client.lua  config.lua  fxmanifest.lua  server.lua
src/: __init__.py  crew.py
src/agents/: __init__.py  code_generator.py  feature_designer.py  lua_architect.py  requirement_analyzer.py
src/config/: __init__.py  llm_factory.py  settings.py
src/models/: __init__.py  schemas.py
src/tasks/: __init__.py  analyze_task.py  architect_task.py  design_task.py  generate_code_task.py
